Improve auto gear monitor default selector fallback

--- a/index.html
+++ b/index.html
@@ -1214,7 +1214,7 @@
                 </div>
                 <div class="auto-gear-field" hidden>
                   <label for="autoGearAddSelectorDefault" id="autoGearAddSelectorDefaultLabel">Default item</label>
-                  <input type="text" id="autoGearAddSelectorDefault" list="autoGearMonitorCatalog" />
+                  <select id="autoGearAddSelectorDefault" class="auto-gear-selector"></select>
                 </div>
                 <div class="auto-gear-field auto-gear-checkbox-field" hidden>
                   <input type="checkbox" id="autoGearAddSelectorInclude" />
@@ -1257,7 +1257,7 @@
                 </div>
                 <div class="auto-gear-field" hidden>
                   <label for="autoGearRemoveSelectorDefault" id="autoGearRemoveSelectorDefaultLabel">Default item</label>
-                  <input type="text" id="autoGearRemoveSelectorDefault" list="autoGearMonitorCatalog" />
+                  <select id="autoGearRemoveSelectorDefault" class="auto-gear-selector"></select>
                 </div>
                 <div class="auto-gear-field auto-gear-checkbox-field" hidden>
                   <input type="checkbox" id="autoGearRemoveSelectorInclude" />
