Move automatic gear highlight toggle to rule toolbar

--- a/index.html
+++ b/index.html
@@ -1056,6 +1056,7 @@
           <div class="auto-gear-action-row">
             <button type="button" id="autoGearAddRule">Add rule</button>
             <button type="button" id="autoGearResetFactory">Reset to factory additions</button>
+            <button type="button" id="autoGearHighlightToggle">Highlight automatic gear</button>
             <button type="button" id="autoGearExport">Export rules</button>
             <button type="button" id="autoGearImport">Import rules</button>
             <input type="file" id="autoGearImportInput" accept=".json,application/json" hidden />
